# git-whistles

./: .gitignore  .ruby-version  .travis.yml  Cargo.toml  Gemfile  HISTORY  LICENSE  README.md  Rakefile  git-chop  git-list-branches  git-merge-po  git-stash-and-checkout  git-whistles.gemspec
.github/workflows/: ci.yml  release.yml  ruby.yml
Formula/: git-whistles.rb
lib/: git-whistles.rb
lib/git-whistles/: app.rb  helpers.rb  jira.rb  logger.rb  version.rb
lib/git-whistles/pull_request/: bare.rb  jira.rb  pivotal.rb
lib/git-whistles/youtrack/: api.rb  branch.rb  ticket.rb
libexec/: git-chop.sh  git-list-branches.sh  git-merge-po.sh  git-outstanding-features.sh  git-stash-and-checkout.sh  git-whistles.sh  runner.rb
spec/: git_merge_po_spec.rb  spec_helper.rb
spec/data/: local.po  remote.po
spec/fixtures/vcr/: get_ticket_auth_failure.yml  get_ticket_not_found.yml  get_ticket_successfull.yml
spec/lib/git-whistles/youtrack/: api_spec.rb  branch_spec.rb
spec/support/: vcr_helper.rb
src/: cli.rs  dispatch.rs  exec.rs  git.rs  main.rs
src/cmd/: changes.rs  chop.rs  ff_all_branches.rs  list_branches.rs  merge_po.rs  mod.rs  shim.rs  staging.rs  stash_and_checkout.rs
tests/: changes.rs  chop.rs  ff_all_branches.rs  list_branches.rs  merge_po.rs  shim.rs  staging.rs  stash_and_checkout.rs
tests/common/: mod.rs
tests/fixtures/merge_po/: base.po
